# drm-rs

./: Cargo.toml
.github/workflows/: ci.yml
drm-ffi/: Cargo.toml
drm-ffi/drm-sys/: Cargo.toml  build.rs
drm-ffi/drm-sys/src/: fourcc.rs  lib.rs
drm-sys/: Cargo.toml
drm-sys/src/: lib.rs
examples/: atomic_modeset.rs  kms_interactive.rs  legacy_modeset.rs  properties.rs  resources.rs
examples/utils/: mod.rs
src/: lib.rs
src/buffer/: format.rs  mod.rs
src/control/: atomic.rs  connector.rs  mod.rs  plane.rs  property.rs
