[package]
name = "drm"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.3.3"
license = "MIT"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]

[dependencies]
nix = "0.8.1"
derive_more = "0.99.11"

[dependencies.drm-sys]
version = "0.0.9"
path = "./drm-sys"

[dependencies.error-chain]
version = "0.12.4"
default-features = false

[features]
use_bindgen = ["drm-sys/use_bindgen"]
