[package]
name = "drm"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.4.0"
license = "MIT"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
exclude = [".gitignore", ".github"]

[dependencies]
nix = "0.20"
bitflags = "1.2"

[dependencies.drm-ffi]
path = "drm-ffi"
version = "0.4"

[dev-dependencies]
rustyline = "8.0"

[dev-dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[features]
use_bindgen = ["drm-ffi/use_bindgen"]

[workspace]
members = [
  "drm-ffi",
  "drm-ffi/drm-sys",
]
