[package]
name = "drm-ffi"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.4.0"
license = "MIT"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]

[dependencies]
nix = "0.20"
bitflags = "1.2"

[dependencies.drm-sys]
path = "drm-sys"
version = "0.4"

[features]
use_bindgen = ["drm-sys/use_bindgen"]
